BUG - some folders of gmail accounts are not visible

--- a/styles/themes/Default/styles.less
+++ b/styles/themes/Default/styles.less
@@ -121,7 +121,7 @@
 	background: fade(#1e1c1f, 20%);
 
 	.items_list .item > .title {
-		color: #d0d0d0;
+		color: rgba(255,255,255,0.4);
 	}
 	.items_list .item.canSelect > .title {
 		color: #fff;
@@ -129,6 +129,13 @@
 		
 		&:hover {
 			color: #eee;
+		}
+	}
+	.items_list.collapsible .item.accordion.canNotSelect .collapse_handler {
+		color: #fff;
+		text-shadow: none;
+		&:hover {
+			color: #fff;
 		}
 	}
 }
